--- a/application/admin/view/dashboard/detail.html
+++ b/application/admin/view/dashboard/detail.html
@@ -101,38 +101,46 @@
                             <!--------推荐功能模块begin-------->
                             <div class="layui-col-md12 webody1">
                                 <div class="layui-card">
-                                    <div class="layui-card-header">推荐功能</div>
+                                    <div class="layui-card-header yty-card-header"><span class="sm-st-icon-left shop-info"><i class="fa  fa-ellipsis-v"></i></span>推荐功能</div>
                                     <div class="layui-col-sm6 layui-col-md3 recommend-col">
                                         <div class="sm-st-recommend-re clearfix">
-                                            <div class="sm-st-icon st-money"><i class="fa  fa-envelope-o"></i></div>
-                                            <div class="sm-st-info-re">
-                                                <span>短信群发</span>
-                                            </div>
+                                            <a href="">
+                                                <div class="sm-st-icon st-money"><i class="fa  fa-envelope-o"></i></div>
+                                                <div class="sm-st-info-re">
+                                                    <span>短信群发</span>
+                                                </div>
+                                            </a>
                                         </div>
                                     </div>
 
                                     <div class="layui-col-sm6 layui-col-md3 recommend-col">
                                         <div class="sm-st-recommend-re clearfix">
-                                            <span class="sm-st-icon st-client"><i class="fa fa-podcast"></i></span>
-                                            <div class="sm-st-info-re">
-                                                催付提醒
-                                            </div>
+                                            <a href="">
+                                                <span class="sm-st-icon st-client"><i class="fa fa-podcast"></i></span>
+                                                <div class="sm-st-info-re">
+                                                    催付提醒
+                                                </div>
+                                            </a>
                                         </div>
                                     </div>
                                     <div class="layui-col-sm6 layui-col-md3 recommend-col">
                                         <div class="sm-st-recommend-re sm-st-info clearfix">
-                                            <span class="sm-st-icon st-percent"><i class="fa fa-free-code-camp"></i></span>
-                                            <div class="sm-st-info-re">
-                                                订单关怀
-                                            </div>
+                                            <a href="">
+                                                <span class="sm-st-icon st-percent"><i class="fa fa-free-code-camp"></i></span>
+                                                <div class="sm-st-info-re">
+                                                    订单关怀
+                                                </div>
+                                            </a>
                                         </div>
                                     </div>
                                     <div class="layui-col-sm6 layui-col-md3 recommend-col">
                                         <div class="sm-st-recommend-re clearfix">
-                                            <span class="sm-st-icon st-back-money"><i class="fa  fa-qrcode"></i></span>
-                                            <div class="sm-st-info-re">
-                                                数据分析
-                                            </div>
+                                            <a href="">
+                                                <span class="sm-st-icon st-back-money"><i class="fa  fa-qrcode"></i></span>
+                                                <div class="sm-st-info-re">
+                                                    数据分析
+                                                </div>
+                                            </a>
                                         </div>
                                     </div>
                                 </div>
@@ -141,11 +149,12 @@
 
                             <div class="layui-col-sm12 webody1">
                             <div class="layui-card">
-                                <div class="layui-card-header">
-                                    访问量
-                                    <div class="layui-btn-group layuiadmin-btn-group">
-                                        <a href="javascript:;" class="layui-btn layui-btn-primary layui-btn-xs">去年</a>
-                                        <a href="javascript:;" class="layui-btn layui-btn-primary layui-btn-xs">今年</a>
+                                <div class="layui-card-header yty-card-header">
+                                    <span class="sm-st-icon-left shop-info"><i class="fa  fa-ellipsis-v"></i></span> DSR评分
+                                    <div class="layuiadmin-btn-group">
+                                        <a href="javascript:;" class="layui-btn layui-btn-normal  layui-btn-radius  layui-btn-sm">近七天</a>
+                                        <a href="javascript:;" class="layui-btn layui-btn-normal  layui-btn-radius  layui-btn-sm">近15天</a>
+                                        <a href="javascript:;" class="layui-btn layui-btn-normal  layui-btn-radius  layui-btn-sm">更多</a>
                                     </div>
                                 </div>
                                 <div class="layui-card-body">
