--- a/public/static/style/green-header.css
+++ b/public/static/style/green-header.css
@@ -3,7 +3,7 @@
 }
 
 .layui-nav-tree .layui-this, .layui-nav-tree .layui-this > a, .layui-nav-tree .layui-nav-child dd.layui-this, .layui-nav-tree .layui-nav-child dd.layui-this a {
-    background-color: #313aa4 !important;
+    background-color: #506def !important;
 }
 
 .layui-layout-admin .layui-logo {
