--- a/application/admin/view/dashboard/detail.html
+++ b/application/admin/view/dashboard/detail.html
@@ -152,9 +152,9 @@
                                 <div class="layui-card-header yty-card-header">
                                     <span class="sm-st-icon-left shop-info"><i class="fa  fa-ellipsis-v"></i></span> DSR评分
                                     <div class="layuiadmin-btn-group">
-                                        <a href="javascript:;" class="layui-btn layui-btn-normal  layui-btn-radius  layui-btn-sm">近七天</a>
-                                        <a href="javascript:;" class="layui-btn layui-btn-normal  layui-btn-radius  layui-btn-sm">近15天</a>
-                                        <a href="javascript:;" class="layui-btn layui-btn-normal  layui-btn-radius  layui-btn-sm">更多</a>
+                                        <a href="javascript:;" class="layui-btn layui-btn-normal layui-btn-radius layui-btn-sm">近七天</a>
+                                        <a href="javascript:;" class="layui-btn layui-btn-normal no-check layui-btn-radius  layui-btn-sm">近15天</a>
+                                        <a href="javascript:;" class="layui-btn layui-btn-normal no-check layui-btn-radius  layui-btn-sm">更多</a>
                                     </div>
                                 </div>
                                 <div class="layui-card-body">
@@ -167,29 +167,74 @@
                                                 </div>
                                             </div>
                                         </div>
+
                                         <div class="layui-col-sm4">
-                                            <div class="layuiadmin-card-list">
-                                                <p class="layuiadmin-normal-font">月访问数</p>
-                                                <span>同上期增长</span>
-                                                <div class="layui-progress layui-progress-big" lay-showPercent="yes">
-                                                    <div class="layui-progress-bar" lay-percent="30%"></div>
-                                                </div>
-                                            </div>
-                                            <div class="layuiadmin-card-list">
-                                                <p class="layuiadmin-normal-font">月下载数</p>
-                                                <span>同上期增长</span>
-                                                <div class="layui-progress layui-progress-big" lay-showPercent="yes">
-                                                    <div class="layui-progress-bar" lay-percent="20%"></div>
-                                                </div>
-                                            </div>
-                                            <div class="layuiadmin-card-list">
-                                                <p class="layuiadmin-normal-font">月收入</p>
-                                                <span>同上期增长</span>
-                                                <div class="layui-progress layui-progress-big" lay-showPercent="yes">
-                                                    <div class="layui-progress-bar" lay-percent="25%"></div>
+                                            <div class="card-block">
+                                                <div class="layui-row row-sm stats-container">
+                                                    <div class="layui-col-xs6  stat-col">
+                                                        <div class="stat-icon"> <i class="fa fa-line-chart"></i> </div>
+                                                        <div class="stat">
+                                                            <div class="value"> 2324 </div>
+                                                            <div class="name"> 今日订单 </div>
+                                                        </div>
+                                                        <div class="layui-progress">
+                                                            <div class="layui-progress-bar layui-bg-blue" style="width: 40%;"></div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="layui-col-xs6  stat-col">
+                                                        <div class="stat-icon"> <i class="fa fa-users"></i> </div>
+                                                        <div class="stat">
+                                                            <div class="value"> 132 </div>
+                                                            <div class="name"> 未处理订单 </div>
+                                                        </div>
+                                                        <div class="layui-progress">
+                                                            <div class="layui-progress-bar layui-bg-blue" style="width: 40%;"></div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="layui-col-xs6  stat-col">
+                                                        <div class="stat-icon"> <i class="fa fa-list-alt"></i> </div>
+                                                        <div class="stat">
+                                                            <div class="value"> 80% </div>
+                                                            <div class="name"> 七日新增 </div>
+                                                        </div>
+                                                        <div class="layui-progress">
+                                                            <div class="layui-progress-bar layui-bg-blue" style="width: 40%;"></div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="layui-col-xs6 stat-col">
+                                                        <div class="stat-icon"> <i class="fa fa-dollar"></i> </div>
+                                                        <div class="stat">
+                                                            <div class="value"> 32% </div>
+                                                            <div class="name"> 七日活跃 </div>
+                                                        </div>
+                                                        <div class="layui-progress">
+                                                            <div class="layui-progress-bar layui-bg-blue" style="width: 40%;"></div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="layui-col-xs6  stat-col">
+                                                        <div class="stat-icon"> <i class="fa fa-list-alt"></i> </div>
+                                                        <div class="stat">
+                                                            <div class="value"> 80% </div>
+                                                            <div class="name"> 十五日新增 </div>
+                                                        </div>
+                                                        <div class="layui-progress">
+                                                            <div class="layui-progress-bar layui-bg-blue" style="width: 40%;"></div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="layui-col-xs6 stat-col">
+                                                        <div class="stat-icon"> <i class="fa fa-dollar"></i> </div>
+                                                        <div class="stat">
+                                                            <div class="value"> 32% </div>
+                                                            <div class="name"> 十五日活跃 </div>
+                                                        </div>
+                                                        <div class="layui-progress">
+                                                            <div class="layui-progress-bar layui-bg-blue" style="width: 40%;"></div>
+                                                        </div>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
+
                                     </div>
                                 </div>
                             </div>
@@ -261,7 +306,7 @@
                                                 <td class="yty_tdleft">
                                                     <span class="st-shop shop_user"><i class="fa fa-user-circle-o"></i></span>
                                                 </td>
-                                                <td class="yty_tdright">覃雪宁<span class="shop_level">标准版</span></td>
+                                                <td class="yty_tdright">里小狗<span class="shop_level">标准版</span></td>
                                             </tr>
                                             <tr>
                                                 <td class="yty_tdright">到期时间：<span class="expire_date red_color">2019-01-28</span></td>
@@ -425,17 +470,23 @@
         var admin = layui.admin
             , element = layui.element
             , we = layui.we
+            , $  = layui.$
             , countUp = layui.countUp;
 
-        var readCount = new countUp.CountUp("readCount", 0, 9999666);
-        var downloadCount = new countUp.CountUp("downloadCount", 0, 33555);
-        var incomeCount = new countUp.CountUp("incomeCount", 0, 999666);
-        var onlineCount = new countUp.CountUp("onlineCount", 0, 666666);
-        readCount.start();
-        downloadCount.start();
-        incomeCount.start();
-        onlineCount.start();
-        we.tips("<li><a href='#'>欢迎使用云创crm系统！！！！！</a></li>")
+//        var readCount = new countUp.CountUp("readCount", 0, 9999666);
+//        var downloadCount = new countUp.CountUp("downloadCount", 0, 33555);
+//        var incomeCount = new countUp.CountUp("incomeCount", 0, 999666);
+//        var onlineCount = new countUp.CountUp("onlineCount", 0, 666666);
+//        readCount.start();
+//        downloadCount.start();
+//        incomeCount.start();
+//        onlineCount.start();
+        we.tips("<li><a href='#'>欢迎使用云创crm系统！！！！！</a></li>");
+        $(".layuiadmin-btn-group a").click(function () {
+//            console.log($(this).text());
+            $(".layuiadmin-btn-group a").addClass('no-check');
+            $(this).removeClass('no-check');
+        });
     });
 </script>
 </body>
