--- a/application/admin/view/dashboard/detail.html
+++ b/application/admin/view/dashboard/detail.html
@@ -36,7 +36,7 @@
                                             <span class="sm-st-icon st-blue"><i class="fa fa-shopping-bag"></i></span>
                                             <div class="sm-st-info">
                                                 <span>35200</span>
-                                                历史总订单数(个)
+                                                历史总订单数(笔)
                                             </div>
                                         </div>
                                     </div>
@@ -80,7 +80,7 @@
                                             <span class="sm-st-icon st-percent"><i class="fa fa-percent"></i></span>
                                             <div class="sm-st-info">
                                                 <span>50%</span>
-                                                成交转化率（百分比）
+                                                今日成交转化率（百分比）
                                             </div>
                                         </div>
                                     </div>
@@ -90,7 +90,7 @@
                                                     class="fa  fa-volume-up"></i></span>
                                             <div class="sm-st-info">
                                                 <span>352</span>
-                                                昨日催付挽回金额（元）
+                                                今日催付挽回金额（元）
                                             </div>
                                         </div>
                                     </div>
@@ -172,60 +172,60 @@
                                             <div class="card-block">
                                                 <div class="layui-row row-sm stats-container">
                                                     <div class="layui-col-xs6  stat-col">
-                                                        <div class="stat-icon"> <i class="fa fa-line-chart"></i> </div>
+                                                        <div class="stat-icon"> <i class="fa fa-shopping-bag"></i> </div>
                                                         <div class="stat">
-                                                            <div class="value"> 2324 </div>
-                                                            <div class="name"> 今日订单 </div>
+                                                            <div class="value"> 2324（笔） </div>
+                                                            <div class="name"> 累计订单 </div>
                                                         </div>
                                                         <div class="layui-progress">
                                                             <div class="layui-progress-bar layui-bg-blue" style="width: 40%;"></div>
                                                         </div>
                                                     </div>
                                                     <div class="layui-col-xs6  stat-col">
-                                                        <div class="stat-icon"> <i class="fa fa-users"></i> </div>
+                                                        <div class="stat-icon"> <i class="fa fa-shopping-bag"></i> </div>
                                                         <div class="stat">
-                                                            <div class="value"> 132 </div>
-                                                            <div class="name"> 未处理订单 </div>
+                                                            <div class="value"> 132（笔） </div>
+                                                            <div class="name"> 成交订单 </div>
                                                         </div>
                                                         <div class="layui-progress">
                                                             <div class="layui-progress-bar layui-bg-blue" style="width: 40%;"></div>
                                                         </div>
                                                     </div>
                                                     <div class="layui-col-xs6  stat-col">
-                                                        <div class="stat-icon"> <i class="fa fa-list-alt"></i> </div>
+                                                        <div class="stat-icon"> <i class="fa fa-rmb"></i> </div>
                                                         <div class="stat">
-                                                            <div class="value"> 80% </div>
-                                                            <div class="name"> 七日新增 </div>
+                                                            <div class="value"> 2534（元） </div>
+                                                            <div class="name"> 累计成交金额 </div>
                                                         </div>
                                                         <div class="layui-progress">
                                                             <div class="layui-progress-bar layui-bg-blue" style="width: 40%;"></div>
                                                         </div>
                                                     </div>
                                                     <div class="layui-col-xs6 stat-col">
-                                                        <div class="stat-icon"> <i class="fa fa-dollar"></i> </div>
+                                                        <div class="stat-icon"> <i class="fa fa-handshake-o"></i> </div>
                                                         <div class="stat">
-                                                            <div class="value"> 32% </div>
-                                                            <div class="name"> 七日活跃 </div>
+                                                            <div class="value"> 22（人） </div>
+                                                            <div class="name"> 累计成交客户 </div>
                                                         </div>
                                                         <div class="layui-progress">
                                                             <div class="layui-progress-bar layui-bg-blue" style="width: 40%;"></div>
                                                         </div>
                                                     </div>
                                                     <div class="layui-col-xs6  stat-col">
-                                                        <div class="stat-icon"> <i class="fa fa-list-alt"></i> </div>
+                                                        <div class="stat-icon"> <i class="fa fa-envelope-o"></i> </div>
                                                         <div class="stat">
-                                                            <div class="value"> 80% </div>
-                                                            <div class="name"> 十五日新增 </div>
+                                                            <div class="value"> 320（条） </div>
+                                                            <div class="name"> 发送短信 </div>
                                                         </div>
                                                         <div class="layui-progress">
                                                             <div class="layui-progress-bar layui-bg-blue" style="width: 40%;"></div>
                                                         </div>
                                                     </div>
                                                     <div class="layui-col-xs6 stat-col">
-                                                        <div class="stat-icon"> <i class="fa fa-dollar"></i> </div>
+                                                        <div class="stat-icon"> <i class="fa fa-percent"></i> </div>
                                                         <div class="stat">
                                                             <div class="value"> 32% </div>
-                                                            <div class="name"> 十五日活跃 </div>
+                                                            <div class="name"> 转化率 </div>
                                                         </div>
                                                         <div class="layui-progress">
                                                             <div class="layui-progress-bar layui-bg-blue" style="width: 40%;"></div>
@@ -306,7 +306,10 @@
                                                 <td class="yty_tdleft">
                                                     <span class="st-shop shop_user"><i class="fa fa-user-circle-o"></i></span>
                                                 </td>
-                                                <td class="yty_tdright">里小狗<span class="shop_level">标准版</span></td>
+                                                <td class="yty_tdright">
+                                                    <span class="user_name">里小狗</span>
+                                                    <span class="shop_level">标准版</span>
+                                                </td>
                                             </tr>
                                             <tr>
                                                 <td class="yty_tdright">到期时间：<span class="expire_date red_color">2019-01-28</span></td>
