--- a/application/admin/view/fields/edit.html
+++ b/application/admin/view/fields/edit.html
@@ -113,7 +113,8 @@
 <script>
     layui.config({
         base: "__STATIC__/", //静态资源所在路径
-        skin: 'layui-layer-we'
+        skin: 'layui-layer-we',
+        version:true,
     }).extend({
         index: 'lib/index', //主入口模块
         formSelects: 'formSelects-v4'
