--- a/application/admin/view/index/forget.html
+++ b/application/admin/view/index/forget.html
@@ -70,7 +70,8 @@
 <script>
     layui.config({
         base: "__STATIC__/", //静态资源所在路径
-        skin: 'layui-layer-we'
+        skin: 'layui-layer-we',
+        version:true,
     }).extend({
         index: 'lib/index' //主入口模块
     }).use(['index', 'user'], function(){
