--- a/application/admin/view/push/index.html
+++ b/application/admin/view/push/index.html
@@ -38,7 +38,8 @@
 <script>
     layui.config({
         base: "__STATIC__/", //静态资源所在路径
-        skin: 'layui-layer-we'
+        skin: 'layui-layer-we',
+        version:true,
     }).extend({
         index: 'lib/index' //主入口模块
     }).use(['index','table','element','form','authtree','we','weTable'], function(){
