--- a/application/admin/view/user/rule/edit.html
+++ b/application/admin/view/user/rule/edit.html
@@ -72,6 +72,7 @@
     layui.config({
         base: "__STATIC__/", //静态资源所在路径
 //        skin: 'layui-layer-we'
+        version:true,
     }).extend({
         index: 'lib/index' //主入口模块
 //        ,validator:'jquery.validator'
