--- a/application/admin/view/user/rule/index.html
+++ b/application/admin/view/user/rule/index.html
@@ -47,6 +47,7 @@
     layui.config({
         base: "__STATIC__/", //静态资源所在路径
 //        skin: 'layui-layer-we'
+        version:true,
     }).extend({
         index: 'lib/index' //主入口模块
     }).use(['jquery','index','treeGrid','element','form','authtree','we','weTable','weTreeGrid'], function(){
