--- a/application/admin/view/user/user/index.html
+++ b/application/admin/view/user/user/index.html
@@ -43,6 +43,7 @@
     layui.config({
         base: "__STATIC__/", //静态资源所在路径
 //        skin: 'layui-layer-we'
+        version:true,
     }).extend({
         index: 'lib/index' //主入口模块
     }).use(['index','table','element','form','authtree','we','weTable','formSearch'], function(){
