--- a/application/admin/view/common/meta.html
+++ b/application/admin/view/common/meta.html
@@ -6,11 +6,11 @@
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <link rel="stylesheet" href="__STATIC__/layui/css/layui.css" media="all">
-    <link rel="stylesheet" href="__STATIC__/style/admin.css" media="all">
-    <link rel="stylesheet" href="__STATIC__/style/green-header.css" media="all">
-    <link rel="stylesheet" href="__STATIC__/style/toastr.css" media="all">
-    <link rel="stylesheet" href="__STATIC__/awesome/css/font-awesome.min.css" media="all">
+    <link rel="stylesheet" href="__STATIC__/layui/css/layui.css?v={$msectime}" media="all">
+    <link rel="stylesheet" href="__STATIC__/style/admin.css?v={$msectime}" media="all">
+    <link rel="stylesheet" href="__STATIC__/style/green-header.css?v={$msectime}" media="all">
+    <link rel="stylesheet" href="__STATIC__/style/toastr.css?v={$msectime}" media="all">
+    <link rel="stylesheet" href="__STATIC__/awesome/css/font-awesome.min.css?v={$msectime}" media="all">
     <!-- 让IE8/9支持媒体查询，从而兼容栅格 -->
     <!--[if lt IE 9]>
     <script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
