--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -477,17 +477,17 @@
             , $  = layui.$
             , countUp = layui.countUp;
 
-        /*var readCount = new countUp.CountUp("readCount", 0, 9999666);
-        var downloadCount = new countUp.CountUp("downloadCount", 0, 33555);
-        var incomeCount = new countUp.CountUp("incomeCount", 0, 999666);
-        var onlineCount = new countUp.CountUp("onlineCount", 0, 666666);
-        readCount.start();
-        downloadCount.start();
-        incomeCount.start();
-        onlineCount.start();*/
-
+//        var readCount = new countUp.CountUp("readCount", 0, 9999666);
+//        var downloadCount = new countUp.CountUp("downloadCount", 0, 33555);
+//        var incomeCount = new countUp.CountUp("incomeCount", 0, 999666);
+//        var onlineCount = new countUp.CountUp("onlineCount", 0, 666666);
+//        readCount.start();
+//        downloadCount.start();
+//        incomeCount.start();
+//        onlineCount.start();
         we.tips("<li><a href='#'>欢迎使用云创crm系统！！！！！</a></li>");
         $(".layuiadmin-btn-group a").click(function () {
+//            console.log($(this).text());
             $(".layuiadmin-btn-group a").addClass('no-check');
             $(this).removeClass('no-check');
         });
