按钮颜色修改

--- a/application/admin/view/auth/admin/edit.html
+++ b/application/admin/view/auth/admin/edit.html
@@ -58,8 +58,8 @@
             </table>
             <div class="layui-form-item footer-form">
                 <div class="footer">
-                    <button type="submit" lay-submit="" lay-filter="formRule" class="layui-btn layui-btn-sm btn-embossed disabled">{:__('OK')}</button>
-                    <button type="reset" class="layui-btn layui-btn-sm btn-embossed">{:__('Reset')}</button>
+                    <button type="submit" lay-submit="" lay-filter="formRule" class="layui-btn layui-btn-sm layui-btn-normal btn-embossed disabled">{:__('OK')}</button>
+                    <button type="reset" class="layui-btn layui-btn-sm layui-btn-normal btn-embossed">{:__('Reset')}</button>
                 </div>
             </div>
         </form>
@@ -77,10 +77,10 @@
         index: 'lib/index', //主入口模块
         formSelects: 'formSelects-v4'
     }).link(
-        '__STATIC__/style/formSelects-v4.css'
+        '__STATIC__/style/formSelects-v4.css?v={$msectime}'
     ).
     link(
-        " __STATIC__/style/jquery.validator.css"
+        " __STATIC__/style/jquery.validator.css?v={$msectime}"
     ).
     use(['jquery','index','formSelects','formValidator'], function(){
         var admin = layui.admin
