--- a/application/admin/view/system/base_set.html
+++ b/application/admin/view/system/base_set.html
@@ -80,8 +80,8 @@
                                 <div class="layui-form-item">
                                     <div class="layui-input-block">
                                         <div class="footer footer-common">
-                                            <button class="layui-btn layui-btn-sm" lay-submit="" lay-filter="component-form-element">{:__('Save')}</button>
-                                            <button type="reset" class="layui-btn layui-btn-sm">{:__('Reset')}</button>
+                                            <button class="layui-btn layui-btn-normal layui-btn-sm" lay-submit="" lay-filter="component-form-element">{:__('Save')}</button>
+                                            <button type="reset" class="layui-btn layui-btn-normal layui-btn-sm">{:__('Reset')}</button>
                                         </div>
                                     </div>
                                 </div>
