--- a/application/admin/view/auth/group/edit.html
+++ b/application/admin/view/auth/group/edit.html
@@ -49,8 +49,8 @@
             <!--hidden layer-footer-->
             <div class="layui-form-item footer-form">
                 <div class="footer">
-                    <button type="submit" lay-submit="" lay-filter="formRule" class="layui-btn layui-btn-sm btn-embossed disabled">{:__('OK')}</button>
-                    <button type="reset" class="layui-btn layui-btn-sm btn-embossed">{:__('Reset')}</button>
+                    <button type="submit" lay-submit="" lay-filter="formRule" class="layui-btn layui-btn-sm layui-btn-normal btn-embossed disabled">{:__('OK')}</button>
+                    <button type="reset" class="layui-btn layui-btn-sm layui-btn-normal btn-embossed">{:__('Reset')}</button>
                 </div>
             </div>
         </form>
