--- a/application/admin/view/auth/group/index.html
+++ b/application/admin/view/auth/group/index.html
@@ -35,7 +35,7 @@
 <!--操作-->
 <script type="text/html" id="barDemo">
     {{# if(d.rules != '*'){  }}
-    <a class="layui-btn layui-btn-xs" lay-event="edit"><i class="layui-icon layui-icon-edit"></i>{:__('Edit')}</a>
+    <a class="layui-btn layui-btn-normal layui-btn-xs" lay-event="edit"><i class="layui-icon layui-icon-edit"></i>{:__('Edit')}</a>
     {{# }  }}
 </script>
 {/block}
