--- a/application/admin/view/fields/edit.html
+++ b/application/admin/view/fields/edit.html
@@ -98,9 +98,9 @@
                 </table>
                 <div class="layui-form-item footer-form">
                     <div class="footer footer-common">
-                        <button type="submit" lay-submit="" lay-filter="formRule" class="layui-btn layui-btn-sm btn-embossed disabled">{:__('OK')}</button>
-                        <button type="reset" class="layui-btn layui-btn-sm btn-embossed">{:__('Reset')}</button>
-                        <a href="{:url($return_url)}"><div type="reset" style="margin-left: 10px" class="layui-btn layui-btn-sm btn-embossed go-back">返回</div></a>
+                        <button type="submit" lay-submit="" lay-filter="formRule" class="layui-btn layui-btn-normal layui-btn-sm btn-embossed disabled">{:__('OK')}</button>
+                        <button type="reset" class="layui-btn layui-btn-sm layui-btn-normal btn-embossed">{:__('Reset')}</button>
+                        <a href="{:url($return_url)}"><div type="reset" style="margin-left: 10px" class="layui-btn layui-btn-normal layui-btn-sm btn-embossed go-back">返回</div></a>
                         <!--onclick="window.history.go(-1)"-->
                     </div>
                 </div>
