--- a/application/admin/view/system/security.html
+++ b/application/admin/view/system/security.html
@@ -47,8 +47,8 @@
                                 <!--</div>-->
                                 <div class="layui-form-item footer-form">
                                     <div class="footer footer-common">
-                                        <button type="submit" lay-submit="" lay-filter="formRule" class="layui-btn layui-btn-sm btn-embossed disabled">{:__('OK')}</button>
-                                        <button type="reset" class="layui-btn layui-btn-sm btn-embossed">{:__('Reset')}</button>
+                                        <button type="submit" lay-submit="" lay-filter="formRule" class="layui-btn layui-btn-normal layui-btn-sm btn-embossed disabled">{:__('OK')}</button>
+                                        <button type="reset" class="layui-btn layui-btn-normal layui-btn-sm btn-embossed">{:__('Reset')}</button>
                                     </div>
                                 </div>
                             </form>
@@ -107,8 +107,8 @@
                                 </table>
                                 <div class="layui-form-item">
                                     <div class="footer footer-common">
-                                        <button class="layui-btn layui-btn-sm" lay-submit="" lay-filter="component-form-element">{:__('Save')}</button>
-                                        <button type="reset" class="layui-btn layui-btn-sm">{:__('Reset')}</button>
+                                        <button class="layui-btn layui-btn-normal layui-btn-sm" lay-submit="" lay-filter="component-form-element">{:__('Save')}</button>
+                                        <button type="reset" class="layui-btn layui-btn-normal layui-btn-sm">{:__('Reset')}</button>
                                     </div>
                                 </div>
                             </form>
