--- a/public/static/style/formSelects-v4.css
+++ b/public/static/style/formSelects-v4.css
@@ -26,14 +26,14 @@ select[xm-select]{display: none !important;}
 .xm-unselect {-moz-user-select: none;-webkit-user-select: none;-ms-user-select: none}
 
 .xm-form-checkbox {position: relative;display: block;vertical-align: middle;cursor: pointer;font-size: 0;-webkit-transition: .1s linear;transition: .1s linear;box-sizing: border-box;height: auto!important;line-height: normal!important;border: none!important;margin-right: 0;padding-right: 0;background: 0 0;}
-.xm-form-checkbox > i {color: #FFF; font-size: 16px; width: 16px; height: 16px; position: absolute; top: 9px; border: 1px solid #5FB878; border-radius: 3px; z-index: 2;}
-.xm-form-checkbox:hover > i {border-color: #5FB878;}
+.xm-form-checkbox > i {color: #FFF; font-size: 16px; width: 16px; height: 16px; position: absolute; top: 9px; border: 1px solid #506def; border-radius: 3px; z-index: 2;}
+.xm-form-checkbox:hover > i {border-color: #506def;}
 .xm-form-checkbox > span{display: block;position: relative;padding: 0 15px 0 30px;height: 100%;font-size: 14px;border-radius: 2px 0 0 2px;background-color: #d2d2d2;overflow: hidden;white-space: nowrap;text-overflow: ellipsis;background: 0 0;color: #666;line-height: 36px;}
 
 .xm-select-parent dl{width: 100%;}
 .xm-select-parent dl dd{position: relative;}
 .xm-select-parent dl dd > i:not(.icon-sousuo){position: absolute; right: 10px; top: 0; color: #AAAAAA;}
-.xm-select-parent dl dd.xm-select-this div i {border: none; color: #009688; font-size: 18px;}
+.xm-select-parent dl dd.xm-select-this div i {border: none; color: #506def; font-size: 18px;}
 .xm-select-parent dl dd.xm-select-this div i:after{content: '\e613';}
 .xm-select-parent dl dd.xm-dis-disabled div i {border-color: #C2C2C2;}
 .xm-select-parent dl dd.xm-dis-disabled.xm-select-this div i {color: #C2C2C2;}
@@ -48,11 +48,11 @@ select[xm-select]{display: none !important;}
 .xm-select-parent .xm-select {width: 320px;line-height: normal;height: auto;padding: 4px 10px 1px 10px;overflow: hidden;min-height: 36px;left: 0;z-index: 99;position: absolute;background: 0 0;padding-right: 20px}
 .xm-select-parent .xm-select:hover {border-color: #C0C4CC}
 .xm-select-parent .xm-select .xm-select-label {display: inline-block;margin: 0;vertical-align: middle}
-.xm-select-parent .xm-select-title div.xm-select-label>span {position: relative;padding: 2px 5px;background-color: #009688;border-radius: 2px;color: #FFF;display: inline-block;line-height: 18px;height: 18px;margin: 2px 5px 2px 0;cursor: initial;user-select: none;font-size: 14px;padding-right: 25px;-webkit-user-select: none;}
+.xm-select-parent .xm-select-title div.xm-select-label>span {position: relative;padding: 2px 5px;background-color: #506def;border-radius: 2px;color: #FFF;display: inline-block;line-height: 18px;height: 18px;margin: 2px 5px 2px 0;cursor: initial;user-select: none;font-size: 14px;padding-right: 25px;-webkit-user-select: none;}
 .xm-select-parent .xm-select-title div.xm-select-label>span i {position: absolute; margin-left: 8px; font-size: 12px; cursor: pointer; line-height: 20px;}
 .xm-select-parent .xm-select .xm-select-input {border: none;height: 28px;background-color: transparent;padding: 0;vertical-align: middle;display: inline-block;width: 50px}
 .xm-select-parent .xm-select--suffix input {border: none}
-.xm-form-selected .xm-select,.xm-form-selected .xm-select:hover {border-color: #009688!important}
+.xm-form-selected .xm-select,.xm-form-selected .xm-select:hover {border-color: #506def!important}
 .xm-select--suffix+div {position: absolute;top: 0;left: 0;bottom: 0;right: 0}
 .xm-select-dis .xm-select--suffix+div {z-index: 100;cursor: no-drop!important;opacity: .2;background-color: #FFF;}
 .xm-select-disabled,.xm-select-disabled:hover {color: #d2d2d2!important;cursor: not-allowed!important;background-color: #fff}
@@ -66,19 +66,19 @@ select[xm-select]{display: none !important;}
 div[xm-hg] .xm-select-label{white-space: nowrap; overflow: hidden; position: absolute; right: 30px; left: 0; padding-left: 10px;}
 
 /* 颜色相关 */
-div[xm-select-skin] .xm-select-title div.xm-select-label>span {border: 1px solid #009688}
+div[xm-select-skin] .xm-select-title div.xm-select-label>span {border: 1px solid #506def}
 div[xm-select-skin] .xm-select-title div.xm-select-label>span i:hover {opacity: .8;filter: alpha(opacity=80);cursor: pointer}
 div[xm-select-skin=default] .xm-select-title div.xm-select-label>span {background-color: #F0F2F5;color: #909399;border: 1px solid #F0F2F5}
 div[xm-select-skin=default] .xm-select-title div.xm-select-label>span i {color: #C0C4CC}
 div[xm-select-skin=default] .xm-select-title div.xm-select-label>span i:before {content: '\e60b'; font-size: 16px; margin-left: -3px;}
-div[xm-select-skin=default] dl dd:not(.xm-dis-disabled) i {border-color: #5FB878}
-div[xm-select-skin=default] dl dd.xm-select-this:not(.xm-dis-disabled) i {color: #5FB878}
+div[xm-select-skin=default] dl dd:not(.xm-dis-disabled) i {border-color: #506def}
+div[xm-select-skin=default] dl dd.xm-select-this:not(.xm-dis-disabled) i {color: #506def}
 div[xm-select-skin=default].xm-form-selected .xm-select,div[xm-select-skin=default].xm-form-selected .xm-select:hover {border-color: #C0C4CC!important}
-div[xm-select-skin=primary] .xm-select-title div.xm-select-label>span {background-color: #009688;color: #FFF;border: 1px solid #009688}
-div[xm-select-skin=primary] .xm-select-title div.xm-select-label>span i {background-color: #009688; color: #FFF}
-div[xm-select-skin=primary] dl dd:not(.xm-dis-disabled) i {border-color: #009688}
-div[xm-select-skin=primary] dl dd.xm-select-this:not(.xm-dis-disabled) i {color: #009688}
-div[xm-select-skin=primary].xm-form-selected .xm-select,div[xm-select-skin=primary].xm-form-selected .xm-select:hover {border-color: #009688!important}
+div[xm-select-skin=primary] .xm-select-title div.xm-select-label>span {background-color: #506def;color: #FFF;border: 1px solid #506def}
+div[xm-select-skin=primary] .xm-select-title div.xm-select-label>span i {background-color: #506def; color: #FFF}
+div[xm-select-skin=primary] dl dd:not(.xm-dis-disabled) i {border-color: #506def}
+div[xm-select-skin=primary] dl dd.xm-select-this:not(.xm-dis-disabled) i {color: #506def}
+div[xm-select-skin=primary].xm-form-selected .xm-select,div[xm-select-skin=primary].xm-form-selected .xm-select:hover {border-color: #506def!important}
 div[xm-select-skin=normal] .xm-select-title div.xm-select-label>span {background-color: #1E9FFF;color: #FFF;border: 1px solid #1E9FFF}
 div[xm-select-skin=normal] .xm-select-title div.xm-select-label>span i {background-color: #1E9FFF;color: #FFF}
 div[xm-select-skin=normal] dl dd:not(.xm-dis-disabled) i {border-color: #1E9FFF}
@@ -100,9 +100,9 @@ div[xm-select-skin=danger].xm-form-selected .xm-select,div[xm-select-skin=danger
 .xm-select-parent .layui-form-danger+.xm-select-title .xm-select {border-color: #FF5722 !important;}
 .xm-select-linkage li {padding: 10px 0px;cursor: pointer;}
 .xm-select-linkage li span {padding-left: 20px;padding-right: 30px;display: inline-block;height: 20px;overflow: hidden;text-overflow: ellipsis;}
-.xm-select-linkage li.xm-select-this span {border-left: 5px solid #009688;color: #009688;padding-left: 15px;}
+.xm-select-linkage li.xm-select-this span {border-left: 5px solid #506def;color: #506def;padding-left: 15px;}
 .xm-select-linkage-group {position: absolute;left: 0;top: 0;right: 0;bottom: 0;overflow-x: hidden;overflow-y: auto;}
-.xm-select-linkage-group li:hover {border-left: 1px solid #009688;}
+.xm-select-linkage-group li:hover {border-left: 1px solid #506def;}
 .xm-select-linkage-group li:hover span {padding-left: 19px;}
 .xm-select-linkage-group li.xm-select-this:hover span {padding-left: 15px;border-left-width: 4px;}
 .xm-select-linkage-group:nth-child(4n+1){background-color: #EFEFEF; left: 0;}
@@ -117,8 +117,8 @@ div[xm-select-skin=danger].xm-form-selected .xm-select,div[xm-select-skin=danger
 .xm-select-linkage-hide {display: none;}
 .xm-select-linkage-show {display: block;}
 
-div[xm-select-skin='default'] .xm-select-linkage li.xm-select-this span {border-left-color: #5FB878;color: #5FB878;}
-div[xm-select-skin='default'] .xm-select-linkage-group li:hover {border-left-color: #5FB878;}
+div[xm-select-skin='default'] .xm-select-linkage li.xm-select-this span {border-left-color: #506def;color: #506def;}
+div[xm-select-skin='default'] .xm-select-linkage-group li:hover {border-left-color: #506def;}
 div[xm-select-skin='primary'] .xm-select-linkage li.xm-select-this span {border-left-color: #1E9FFF;color: #1E9FFF;}
 div[xm-select-skin='primary'] .xm-select-linkage-group li:hover {border-left-color: #1E9FFF;}
 div[xm-select-skin='normal'] .xm-select-linkage li.xm-select-this span {border-left-color: #1E9FFF;color: #1E9FFF;}
@@ -137,9 +137,9 @@ div[xm-select-skin='danger'] .xm-select-linkage-group li:hover {border-left-colo
 .xm-select-parent dd > .xm-cz-group .xm-cz i{margin-right: 10px;}
 .xm-select-parent dd > .xm-cz-group[show='name'] .xm-cz i{display: none;}
 .xm-select-parent dd > .xm-cz-group[show='icon'] .xm-cz span{display: none;}
-.xm-select-parent dd .xm-cz:hover{color: #009688;}
+.xm-select-parent dd .xm-cz:hover{color: #506def;}
 div[xm-select-skin='default'] dd .xm-cz:hover{color: #C0C4CC;}
-div[xm-select-skin='primary'] dd .xm-cz:hover{color: #009688;}
+div[xm-select-skin='primary'] dd .xm-cz:hover{color: #506def;}
 div[xm-select-skin='normal'] dd .xm-cz:hover{color: #1E9FFF;}
 div[xm-select-skin='warm'] dd .xm-cz:hover{color: #FFB800;}
 div[xm-select-skin='danger'] dd .xm-cz:hover{color: #FF5722;}
