--- a/application/admin/view/auth/admin/add.html
+++ b/application/admin/view/auth/admin/add.html
@@ -124,10 +124,10 @@
         index: 'lib/index', //主入口模块
         formSelects: 'formSelects-v4'
     }).link(
-        '__STATIC__/style/formSelects-v4.css'
+        '__STATIC__/style/formSelects-v4.css?v={$msectime}'
     ).
     link(
-        " __STATIC__/style/jquery.validator.css"
+        " __STATIC__/style/jquery.validator.css?v={$msectime}"
     ).
     use(['jquery','index','formSelects','formValidator'], function(){
         var admin = layui.admin
