--- a/application/admin/view/profile/index.html
+++ b/application/admin/view/profile/index.html
@@ -92,8 +92,8 @@
                     <!--</div>-->
                     <div class="layui-form-item footer-form">
                         <div class="footer footer-common">
-                            <button type="submit" lay-submit="" lay-filter="" class="layui-btn layui-btn-sm btn-embossed disabled">{:__('OK')}</button>
-                            <button type="reset" class="layui-btn layui-btn-sm btn-embossed">{:__('Reset')}</button>
+                            <button type="submit" lay-submit="" lay-filter="" class="layui-btn layui-btn-sm layui-btn-normal btn-embossed disabled">{:__('OK')}</button>
+                            <button type="reset" class="layui-btn layui-btn-sm layui-btn-normal btn-embossed">{:__('Reset')}</button>
                         </div>
                     </div>
                 </form>
