完成基本调色

--- a/application/admin/view/push/index.html
+++ b/application/admin/view/push/index.html
@@ -30,7 +30,7 @@
 
 <!--操作-->
 {:build_actionbar('actionbar',['edit','test', 'del'],[
-'push' => ['layui-btn layui-btn-xs', 'layui-icon layui-icon-circle', '发送测试','Push/push']
+'push' => ['layui-btn layui-btn-xs layui-btn-normal', 'layui-icon layui-icon-circle', '发送测试','Push/push']
 ])}
 {/block}
 
