--- a/application/admin/view/push/edit.html
+++ b/application/admin/view/push/edit.html
@@ -94,8 +94,8 @@
 
             <div class="layui-form-item footer-form">
                 <div class="footer">
-                    <button type="submit" lay-submit="" lay-filter="formRule" class="layui-btn layui-btn-sm btn-embossed disabled">{:__('OK')}</button>
-                    <button type="reset" class="layui-btn layui-btn-sm btn-embossed">{:__('Reset')}</button>
+                    <button type="submit" lay-submit="" lay-filter="formRule" class="layui-btn layui-btn-normal layui-btn-sm btn-embossed disabled">{:__('OK')}</button>
+                    <button type="reset" class="layui-btn layui-btn-sm layui-btn-normal btn-embossed">{:__('Reset')}</button>
                 </div>
             </div>
         </form>
@@ -114,9 +114,9 @@
 //        ,validator:'jquery.validator'
 //        ,zhCN:'zh-CN'
     }).link(
-        '__STATIC__/style/jquery.validator.css'
+        '__STATIC__/style/jquery.validator.css?v={$msectime}'
     ).link(
-        " __STATIC__/style/jquery.validator.css"
+        " __STATIC__/style/jquery.validator.css?v={$msectime}"
     ).use(['jquery','index','laydate','formValidator'], function(){
         var admin = layui.admin
             ,$ = layui.$
