--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -102,45 +102,48 @@
                                 <div class="layui-col-md12 webody1">
                                     <div class="layui-card">
                                         <div class="layui-card-header yty-card-header"><span class="sm-st-icon-left shop-info"><i class="fa  fa-ellipsis-v"></i></span>推荐功能</div>
-                                        <div class="layui-col-sm6 layui-col-md3 recommend-col">
-                                            <div class="sm-st-recommend-re clearfix">
-                                                <a href="">
-                                                    <div class="sm-st-icon st-money"><i class="fa  fa-envelope-o"></i></div>
-                                                    <div class="sm-st-info-re">
-                                                        <span>短信群发</span>
+                                        <div class="layui-card-body">
+                                            <div class="layui-row">
+                                                <div class="layui-col-sm6 layui-col-md3 recommend-col">
+                                                    <div class="sm-st-recommend-re clearfix">
+                                                        <a href="">
+                                                            <div class="sm-st-icon st-money"><i class="fa  fa-envelope-o"></i></div>
+                                                            <div class="sm-st-info-re">
+                                                                <span>短信群发</span>
+                                                            </div>
+                                                        </a>
                                                     </div>
-                                                </a>
-                                            </div>
-                                        </div>
-
-                                        <div class="layui-col-sm6 layui-col-md3 recommend-col">
-                                            <div class="sm-st-recommend-re clearfix">
-                                                <a href="">
-                                                    <span class="sm-st-icon st-client"><i class="fa fa-podcast"></i></span>
-                                                    <div class="sm-st-info-re">
-                                                        催付提醒
+                                                </div>
+                                                <div class="layui-col-sm6 layui-col-md3 recommend-col">
+                                                    <div class="sm-st-recommend-re clearfix">
+                                                        <a href="">
+                                                            <span class="sm-st-icon st-client"><i class="fa fa-podcast"></i></span>
+                                                            <div class="sm-st-info-re">
+                                                                催付提醒
+                                                            </div>
+                                                        </a>
                                                     </div>
-                                                </a>
-                                            </div>
-                                        </div>
-                                        <div class="layui-col-sm6 layui-col-md3 recommend-col">
-                                            <div class="sm-st-recommend-re sm-st-info clearfix">
-                                                <a href="">
-                                                    <span class="sm-st-icon st-percent"><i class="fa fa-free-code-camp"></i></span>
-                                                    <div class="sm-st-info-re">
-                                                        订单关怀
+                                                </div>
+                                                <div class="layui-col-sm6 layui-col-md3 recommend-col">
+                                                    <div class="sm-st-recommend-re sm-st-info clearfix">
+                                                        <a href="">
+                                                            <span class="sm-st-icon st-percent"><i class="fa fa-free-code-camp"></i></span>
+                                                            <div class="sm-st-info-re">
+                                                                订单关怀
+                                                            </div>
+                                                        </a>
                                                     </div>
-                                                </a>
-                                            </div>
-                                        </div>
-                                        <div class="layui-col-sm6 layui-col-md3 recommend-col">
-                                            <div class="sm-st-recommend-re clearfix">
-                                                <a href="">
-                                                    <span class="sm-st-icon st-back-money"><i class="fa  fa-qrcode"></i></span>
-                                                    <div class="sm-st-info-re">
-                                                        数据分析
+                                                </div>
+                                                <div class="layui-col-sm6 layui-col-md3 recommend-col">
+                                                    <div class="sm-st-recommend-re clearfix">
+                                                        <a href="">
+                                                            <span class="sm-st-icon st-back-money"><i class="fa  fa-qrcode"></i></span>
+                                                            <div class="sm-st-info-re">
+                                                                数据分析
+                                                            </div>
+                                                        </a>
                                                     </div>
-                                                </a>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
