--- a/public/static/style/admin.css
+++ b/public/static/style/admin.css
@@ -2125,6 +2125,7 @@ tr>td.yty_tdright {
 }
 
 .yty-card-header{
+    border-bottom: 1px dashed #e5e5e5;
     font-weight: 600;
     height: 30px;
     line-height: 30px;
